라우팅 규칙 수정

--- a/templates/introduce/base.html
+++ b/templates/introduce/base.html
@@ -32,7 +32,7 @@
     <title>{% block title %}This Web is created by using python! {% endblock %}</title>
 </head>
 
-<body style="max-width: 1200px;">
+<body style="max-width: 1200px; padding-bottom: 30px;">
     <div id="sidebar" class="Outer" style="margin:0px;" >
         {% block sidebar %}
         <div class="row" style="height:20px;"></div>
