--- a/templates/introduce/base_introduce.html
+++ b/templates/introduce/base_introduce.html
@@ -3,7 +3,8 @@
 {% block sidebar %}
 {{ block.super }}
 
-<ul>
+<h5>&nbsp;</h5>
+<!--ul>
     <lit><a href="/introduce">Home</a></lit>
-</ul>
+</ul-->
 {% endblock %}
