--- a/templates/introduce/iswhat.html
+++ b/templates/introduce/iswhat.html
@@ -5,7 +5,7 @@
 {% load static %}
 
 
-<div class="left" style="padding-left:60px;" >
+<div class="" style="padding-left:60px; text-align:center" >
     <br />
     <h2 style="color:#1b1e21">This is website with using python</h2>
     <br /><br />
