--- a/templates/introduce/base.html
+++ b/templates/introduce/base.html
@@ -12,7 +12,6 @@
         }
 
         .UpperMenu {
-            cursor: pointer;
             text-align: center;
         }
 
@@ -65,7 +64,7 @@
 
         <div class="row">
             <div class="col-sm"><h5 class="UpperMenu"><a href="/">Home</a></h5></div>
-            <div class="col-sm"><h5 class="UpperMenu"><a href="/">Portfolio</a></h5></div>
+            <div class="col-sm"><h5 class="UpperMenu"><a href="/blog">Blog</a></h5></div>
             <div class="col-sm"><h5 class="UpperMenu"><a href="/aboutme">Me</a></h5></div>
             <!-- Me 메뉴를 추후 Blog 메뉴로 대체하고, 해당 페이지는 새로 띄우기로 하자 -->
             <!-- 세련된 스킨을 적용하자 -->
