--- a/templates/introduce/index.html
+++ b/templates/introduce/index.html
@@ -22,15 +22,17 @@
 
 <br />
 <br />
-<div class="text-center">
-    <h6>Although I am not fluent with some skills,</h6>
-    <h6>I tryna show my desire with this site</h6>
-    <h6>, which let us know there won't be sad result.</h6>
-</div>
 
-<div class="container" style="max-width: 800px;">
-    <img src="{% static 'img/vray_0111_1.png' %}" class="img-fluid" alt="Responsive image">
-</div>
+<div style="display: none;">
+    <div class="text-center">
+        <h6>Although I am not fluent with some skills,</h6>
+        <h6>I tryna show my desire with this site</h6>
+        <h6>, which let us know there won't be sad result.</h6>
+    </div>
 
+    <div class="container" style="max-width: 800px;">
+        <img src="{% static 'img/vray_0111_1.png' %}" class="img-fluid" alt="Responsive image">
+    </div>
+</div>
 
 {% endblock content %}
