--- a/templates/introduce/base.html
+++ b/templates/introduce/base.html
@@ -48,7 +48,7 @@
 
     </style>
 
-    <title>{% block title %}This Web is created by using python! {% endblock %}</title>
+    <title>{% block title %}Python Web{% endblock %}</title>
 </head>
 
 <body style="max-width: 1200px; padding-bottom: 30px;">
